--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="manifest" href="manifest.json">
   <meta name="viewport" content="width=device-width">
   <title>Chat</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -10,9 +11,9 @@
 
 <body>
   <select id="chat" onchange="load()">
-    <option value="1">Chat 1</option>
-    <option value="2">Chat 2</option>
-    <option value="3">Chat 3</option>
+    <option value="1">Levels</option>
+    <option value="2">Bugs</option>
+    <option value="3">Request Features</option>
   </select>
   <div id="chatbody"></div>
   <br>
