--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   </select>
   <div id="chatbody"></div>
   <br>
-  <input type="text" placeholder="Username?" id="user"></input>
-  <br>
+  <input type="text" placeholder="Username?" id="user" hidden></input>
   <input type="text" placeholder="Text?" id="text"></input>
   <br>
   <button onclick="submit()">Submit</button>
